test/spec_vectors/simd_i64x2_cmp/fail/module_8.wat
(module (func $i64x2.eq-arg-empty (result v128) (i64x2.eq)))